--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   /* color */
   --bg: #1d2021;
   --bg-soft: #282828;
-  --surface: #32302f;
+  --surface: #282523;
   --surface-hover: #3c3836;
   --border: #45403d;
   --text: #ebdbb2;
